--- a/requirements.txt
+++ b/requirements.txt
@@ -1,40 +1,47 @@
-scrapy
-service-identity>=16.0.0
-w3lib>=1.17.0
-cryptography>=2.0
-lxml>=3.5.0;
-Twisted>=17.9.0
-itemadapter>=0.1.0
-protego>=0.1.15
-itemloaders>=1.0.1
-parsel>=1.5.0
-cssselect>=0.9.1
-pyOpenSSL>=16.2.0
-queuelib>=1.4.2
-zope.interface>=4.1.3
-PyDispatcher>=2.0.5
-pyasn1
-pyasn1-modules
-attrs>=16.0.0
-six>=1.4.1
-cffi!=1.11.3,>=1.8
-hyperlink>=17.1.1
-constantly>=15.1
-Automat>=0.3.0
-PyHamcrest!=1.10.0,>=1.9.0
-incremental>=16.10.1
-jmespath>=0.9.5
-setuptools
-pycparser
-idna>=2.5
-twilio
-PyJWT>=1.4.2
-requests>=2.0.0;
-six
-pytz
-certifi>=2017.4.17
-idna<3,>=2.5
-chardet<4,>=3.0.2
-urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1
-selenium
-urllib3
+astroid==2.4.2
+attrs==20.3.0
+Automat==20.2.0
+certifi==2020.12.5
+cffi==1.14.4
+chardet==4.0.0
+colorama==0.4.4
+configparser==5.0.1
+constantly==15.1.0
+crayons==0.4.0
+cryptography==3.3.1
+cssselect==1.1.0
+hyperlink==20.0.1
+idna==2.10
+incremental==17.5.0
+isort==5.6.4
+itemadapter==0.2.0
+itemloaders==1.0.4
+jmespath==0.10.0
+lazy-object-proxy==1.4.3
+lxml==4.6.2
+mccabe==0.6.1
+parsel==1.6.0
+Protego==0.1.16
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.20
+PyDispatcher==2.0.5
+PyHamcrest==2.0.2
+PyJWT==2.0.0
+pylint==2.6.0
+pyOpenSSL==20.0.1
+pytz==2020.5
+queuelib==1.5.0
+requests==2.25.1
+Scrapy==2.4.1
+selenium==3.141.0
+service-identity==18.1.0
+six==1.15.0
+toml==0.10.2
+twilio==6.50.1
+Twisted==20.3.0
+urllib3==1.26.2
+w3lib==1.22.0
+webdriver-manager==3.2.2
+wrapt==1.12.1
+zope.interface==5.2.0
